- Made initial landing page - Completed basic styling in main.scss - Imported main.scss into main.js - Setup webpack for dev - Made modal (non-functioning)

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -18,7 +18,41 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <main class="sleep">
+    <span id="sun" class="sun"></span>
+    <div class="coming-soon">
+      <h1>Sunny Hotel, <span>Batala</span></h1>
+      <p>Website under construction</p>
+      <button id="contactButton">Contact us</button>
+    </div>
+    <div class="modal active">
+      <div class="modal-head">
+        <img src="../../assets/img/aircon.svg" height="25" class="head-logo" />
+        <img src="../../assets/img/parking.png" height="25" class="head-logo" />
+        <img src="../../assets/img/wifi.svg" height="25" class="head-logo" />
+        <img src="../../assets/img/room-service.svg" height="25" class="head-logo" />
+        <img src="../../assets/img/restaurant.svg" height="25" class="head-logo" />
+        <img src="../../assets/img/laundry.svg" height="25" class="head-logo" />
+      </div>
+      <div class="modal-content">
+        <h2>Sunny Hotel Restaurant & Beer Bar</h2>
+        <address>
+          <p>Near Bus Stand Batala</p>
+          <p>Jalandhar Road</p>
+          <p>Batala, Punjab</p>
+          <p>143505, India</p>
+          <p> +91 187 124 5344</p>
+        </address>
+        <div class="links-logos"></a>
+          <a href="" title="" rel="noopener noreferrer" ><img src="../../assets/img/goibibo.png" width="50" height="50" /></a>
+          <a href="" title="" rel="noopener noreferrer" ><img src="../../assets/img/tripadvisor.png" height="50" /></a>
+        </div>
+      </div>
+      <div id="close" class="modal-footer" tabindex="0">
+         Close
+      </div>
+    </div>
+  </main>
 </body>
 
 </html>
