- Added rules for hr, submit button, form fields and ::selection pseudo classses in elements - Added colors for red, green and purple to colors - Added functional classes to hide and show the modal to atomic

--- a/src/assets/scss/_atomic.scss
+++ b/src/assets/scss/_atomic.scss
@@ -1,8 +1,14 @@
 .active {
-    display: block;
+    transform: translate(-50%, -50%) !important;
+    opacity: 1 !important;
+}
+.alive {
+    display: unset !important;
+    opacity: 1 !important;
 }
 .sleep {
     position: relative;
+    transition: 0.5s;
     &::before{
         height:100%;
         width: 100%;
