--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,40 +4,77 @@
 @import './fonts';
 @import './atomic';
 
+.loader {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    display: none;
+
+    &::after {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        content: '';
+        width: 10rem;
+        height: 10rem;
+        border: 16px solid $green;
+        border-top: 16px solid $purple;
+        border-radius: 50%;
+        animation: loader 1.5s linear infinite;
+        transition: 0.4s;
+    }
+
+    &::before {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        content: '';
+        background-color: rgba(0, 0, 0, 0.9);
+        top: 0;
+        left: 0;
+    }
+}
+
 .sun {
     background: url('../img/sun.svg') top left/contain no-repeat;
-    width: 10%;
-    height:10%;
-    top: 5rem;
-    left: 5rem;
+    width: 10rem;
+    height: 10rem;
+    top: -10rem;
+    left: 50%;
+    transform: translateX(-50%);
     position: absolute;
     content: '';
     z-index: 1;
 }
+
 .coming-soon {
     color: white;
     text-align: center;
-
+    position: relative;
 
     h1 {
         font-size: 8rem;
         font-family: 'Sunny Title';
         margin: 3rem 0;
         text-shadow: inset 0.2rem 0.2rem 0.4rem #eda800;
-        text-shadow: 0.2rem 0.2rem 0.4rem rgba(0,0,0,0.3);
+        text-shadow: 0.2rem 0.2rem 0.4rem rgba(0, 0, 0, 0.3);
 
         span {
             color: $red;
         }
     }
+
     p {
         font-family: 'Sunny Body';
         font-size: 4rem;
         font-style: italic;
-        color: rgba(255,255,255,0.7);
+        color: rgba(255, 255, 255, 0.7);
         margin: 3rem 0;
     }
 }
+
 .modal {
     top: 50%;
     left: 50%;
@@ -55,26 +92,34 @@
     flex-direction: column;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0.2rem 0.2rem 0.4rem rgba(0,0,0,0.3);
+    box-shadow: 0.2rem 0.2rem 0.4rem rgba(0, 0, 0, 0.3);
     z-index: 3;
+    transform: translate(-50%, -200%);
+    opacity: 0;
+    transition: 0.5s;
 }
 
 .modal-head {
     background: #8B69D1;
     padding: 2rem;
     color: #42287A;
+
+    img {
+        filter: invert(1)
+    }
 }
+
 .modal-content {
     flex: 1 0;
     padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     overflow-y: scroll;
+    position: relative;
+
     h2 {
         font-family: 'Sunny Title';
     }
 }
+
 .links-logos {
     margin: 2rem 0;
 
@@ -87,6 +132,7 @@
         }
     }
 }
+
 .modal-footer {
     background: #42287A;
     padding: 2rem;
@@ -94,8 +140,18 @@
     cursor: pointer;
     transition: 0.4s;
 
-    &:hover  {
-        background-color: #8B69D1;
-        color: #42287A;
+    &:hover {
+        background-color: $red;
+        color: white;
+    }
+}
+
+@keyframes loader {
+    from {
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+
+    to {
+        transform: translate(-50%, -50%) rotate(360deg);
     }
 }
