--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -5,12 +5,13 @@
   <meta charset="utf-8">
   <title>Sunny Hotel, Batala | Under Contruction</title>
   <script src="https://www.google.com/recaptcha/api.js?render=6LfxgcsUAAAAACq6d-R8izsfMbDymuSabaewqrAM"></script>
-  <meta name="description" content="">
+  <meta name="description" content="Sunny Hotel Batala is a fully licensed hotel with a traditional Panjabi restaurant, airconditioned rooms, an alcohol serving bar and more.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" value="index,follow">
   <meta type="og:type" content="website">
   <meta type="og:title" content="Sunny Hotel, Batala | Under Contruction">
   <meta type="og:image" content="${require('../../assets/img/sunnyhotel-thumb.png')}">
+  <meta type="og:description" content="Sunny Hotel Batala is a fully licensed hotel with a traditional Panjabi restaurant, airconditioned rooms, an alcohol serving bar and more.">
   <meta type="og:url" content="https://sunnyhotelbatala.com">
 
   <link rel="apple-touch-icon" href="${require('../../assets/img/favicon.png')}">
@@ -30,7 +31,7 @@
   <!-- Add your site or application content here -->
   <main class="">
     <div class="coming-soon">
-      <span id="sun" class="sun"></span>
+      <img src="../../assets/img/sun.png" class="sun" width="100%" />
       <h1>Sunny Hotel, <span>Batala</span></h1>
       <p>Website under construction</p>
       <button id="contactButton">Contact us</button>
