--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -14,6 +14,8 @@
   <meta type="og:description" content="Sunny Hotel Batala is a fully licensed hotel with a traditional Panjabi restaurant, airconditioned rooms, an alcohol serving bar and more.">
   <meta type="og:url" content="https://sunnyhotelbatala.com">
 
+  <%- include('../partials/twitter-meta.ejs') -%>
+
   <link rel="apple-touch-icon" href="${require('../../assets/img/favicon.png')}">
   <link rel="icon" type="image/png" href="${require('../../assets/img/favicon-32x32.png')}" sizes="32x32">
   <link rel="icon" type="image/png" href="${require('../../assets/img/favicon-16x16.png')}" sizes="16x16">
